<resources>
    <string name="app_name">Binary Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="music_bg">Music background</string>
    <string name="sound_fx">Sound effect</string>
    <string name="game_paused">Game paused</string>
    <string name="game_over">Game Over!</string>
    <string name="play_again">Play again</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="about">About</string>
    <string name="share_highest_score">Share Highest Score</string>
    <string name="warning">Warning</string>

    <string name="start_cap">START</string>
    <string name="high_scores_cap">HIGH SCORES</string>
    <string name="settings_cap">SETTINGS</string>
    <string name="about_cap">ABOUT</string>

    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="lines">Lines</string>
    <string name="rank">Rank</string>
    <string name="time">Time</string>
    <string name="line_left">Line left</string>
    <string name="played_at">Played at</string>

    <string name="confirm_exit_game">Your game progress will be lost.\nAre you sure to exit?</string>
    <string name="confirm_exit_app">Are you sure to exit?</string>
    <string name="confirm_restart_game">Are you sure to restart game?</string>

    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="max_lines">15</string>

    <string name="txt_about">Binary game v 1.0.1 \n by BigScreen</string>
    <string name="txt_highest_score">Cool, you got the first rank!</string>
    <string name="share_message">Now learn binary conversion becomes easy and fun. Download Binary Game, and convert them all!</string>
    <string name="play_store_uri_format">https://play.google.com/store/apps/details?id=%s</string>
    <string name="share_score">I got %1$d score in level %2$d.</string>
    <string name="warning_screen_resolution">Your device screen resolution is too small. We can\'t guarantee Binary Game will works well on your device.</string>
</resources>
