<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_margin"
    android:background="@drawable/bg_background_other">

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="@color/accent"
        android:text="@string/high_scores_cap"
        pixlui:typeface="Cave-Story.ttf"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_title"
        android:layout_above="@+id/btn_share_score"
        android:layout_marginTop="@dimen/setting_body_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/line_padding"
                android:textSize="24sp"
                android:textColor="@color/primary_dark"
                android:text="@string/rank"
                pixlui:typeface="Cave-Story.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="@dimen/line_padding"
                android:textSize="24sp"
                android:textColor="@color/primary_dark"
                android:text="@string/score"
                pixlui:typeface="Cave-Story.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/tv_item_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/line_padding"
                android:textSize="24sp"
                android:textColor="@color/primary_dark"
                android:text="@string/level"
                pixlui:typeface="Cave-Story.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/tv_item_lines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/line_padding"
                android:textSize="24sp"
                android:textColor="@color/primary_dark"
                android:text="@string/lines"
                pixlui:typeface="Cave-Story.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/tv_item_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:layout_margin="@dimen/line_padding"
                android:textSize="24sp"
                android:textColor="@color/primary_dark"
                android:text="@string/played_at"
                pixlui:typeface="Cave-Story.ttf"/>

        </LinearLayout>

        <ListView
            android:id="@+id/lv_scores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:scrollingCache="false" />

    </LinearLayout>

    <com.neopixl.pixlui.components.button.Button
        android:id="@+id/btn_share_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/line_padding"
        android:layout_marginLeft="@dimen/line_padding"
        android:layout_marginRight="@dimen/line_padding"
        android:background="@drawable/bg_btn_primary_flat"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/share_highest_score"
        pixlui:typeface="Cave-Story.ttf"/>

</RelativeLayout>