<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_confirm_width"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:minWidth="@dimen/dialog_confirm_width"
    android:orientation="vertical"
    android:padding="3dp">

    <LinearLayout
        android:id="@+id/layout_dlg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bigscreen.binarygame.common.component.GameTextView
            android:id="@+id/text_dlg_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textColor="@color/accent"
            android:textSize="16sp"
            app:textFont="pressStart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/accent" />

    </LinearLayout>

    <com.bigscreen.binarygame.common.component.GameTextView
        android:id="@+id/text_dlg_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/message"
        android:textColor="@color/accent"
        android:textSize="14sp"
        app:textFont="pressStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <com.bigscreen.binarygame.common.component.GameButton
            android:id="@+id/button_dlg_negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_primary_flat"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:textFont="pressStart" />

        <com.bigscreen.binarygame.common.component.GameButton
            android:id="@+id/button_dlg_positive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_primary_flat"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:textFont="pressStart" />

    </LinearLayout>

</LinearLayout>