<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bg_background"
    tools:context=".MainActivity"
    tools:ignore="DisableBaselineAlignment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/line_padding"
            android:orientation="vertical">

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/decimal_hint_height"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/score"
                android:background="@color/primary_dark"
                pixlui:typeface="Pixelmix.ttf"
                tools:ignore="SmallSp" />

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/text_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="7.5dp"
                android:paddingBottom="7.5dp"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                android:textSize="19sp"
                android:text="@string/zero"
                android:background="@drawable/border_primary_dark"
                pixlui:typeface="PressStart2P.ttf"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/line_padding"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.neopixl.pixlui.components.textview.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:text="@string/level"
                    android:background="@color/primary_dark"
                    pixlui:typeface="Pixelmix.ttf"
                    tools:ignore="SmallSp" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/text_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/primary_dark"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/one"
                    android:background="@drawable/border_primary_dark"
                    pixlui:typeface="PressStart2P.ttf"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="end">

                <com.neopixl.pixlui.components.textview.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:text="@string/lines"
                    android:background="@color/primary_dark"
                    pixlui:typeface="Pixelmix.ttf"
                    tools:ignore="SmallSp" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/text_lines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/primary_dark"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/zero"
                    android:background="@drawable/border_primary_dark"
                    pixlui:typeface="PressStart2P.ttf"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/image_btn_pause"
                android:layout_width="@dimen/game_btn_size"
                android:layout_height="@dimen/game_btn_size"
                android:layout_margin="5dp"
                android:padding="@dimen/oval_btn_padding"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_pause_white"
                android:background="@drawable/bg_btn_primary_pixelart"
                android:visibility="visible"/>

            <FrameLayout
                android:id="@+id/frame_keyboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/game_panel_padding"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7.5">

        <LinearLayout
            android:id="@+id/layout_decimal_hint_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/decimal_hint_height"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:background="@color/primary_dark">

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="128"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="64"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="32"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="16"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="8"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="4"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="2"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="1"
                pixlui:typeface="Pixelmix.ttf"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="@dimen/line_padding_twice"
                android:layout_marginRight="@dimen/line_padding_twice"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_decimal_hint_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/decimal_hint_height"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/primary_dark">

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="128"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="64"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="32"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="16"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="8"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="4"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="2"
                pixlui:typeface="Pixelmix.ttf"/>

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/line_padding"
                android:layout_marginRight="@dimen/line_padding"
                android:gravity="center"
                android:textColor="@color/primary_white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="1"
                pixlui:typeface="Pixelmix.ttf"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="@dimen/line_padding_twice"
                android:layout_marginRight="@dimen/line_padding_twice"/>

         </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_game_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout_decimal_hint_top"
            android:layout_above="@+id/layout_decimal_hint_bottom"
            android:orientation="vertical"
            android:gravity="bottom" />

    </RelativeLayout>


</LinearLayout>
